--- a/R/clean_data/00_process_catch_data.html
+++ b/R/clean_data/00_process_catch_data.html
@@ -1569,23 +1569,17 @@ overflow-y: auto;
 border: 1px solid #ddd;
 border-radius: 4px;
 }
-.tabset-dropdown > .nav-tabs > li.active:before {
-content: "";
+.tabset-dropdown > .nav-tabs > li.active:before, .tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+content: "\e259";
 font-family: 'Glyphicons Halflings';
 display: inline-block;
 padding: 10px;
 border-right: 1px solid #ddd;
 }
 .tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
-content: "";
-border: none;
-}
-.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
-content: "";
+content: "\e258";
 font-family: 'Glyphicons Halflings';
-display: inline-block;
-padding: 10px;
-border-right: 1px solid #ddd;
+border: none;
 }
 .tabset-dropdown > .nav-tabs > li.active {
 display: block;
@@ -1628,7 +1622,7 @@ display: none;
 
 <h1 class="title toc-ignore">Clean catch data</h1>
 <h4 class="author">Max Lindmark &amp; Malin Karlsson</h4>
-<h4 class="date">14 November, 2022</h4>
+<h4 class="date">08 March, 2023</h4>
 
 </div>
 
@@ -1642,7 +1636,7 @@ different layout so I will clean them separately…</p>
 #&gt; ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──
 #&gt; ✔ ggplot2 3.3.6      ✔ purrr   0.3.4 
 #&gt; ✔ tibble  3.1.8      ✔ dplyr   1.0.10
-#&gt; ✔ tidyr   1.2.0      ✔ stringr 1.4.1 
+#&gt; ✔ tidyr   1.2.0      ✔ stringr 1.5.0 
 #&gt; ✔ readr   2.1.1      ✔ forcats 0.5.1
 #&gt; Warning: package &#39;tidyr&#39; was built under R version 4.0.5
 #&gt; ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
@@ -1694,30 +1688,30 @@ sessionInfo()
 #&gt; 
 #&gt; other attached packages:
 #&gt;  [1] patchwork_1.1.1    RColorBrewer_1.1-3 tidylog_1.0.2      forcats_0.5.1     
-#&gt;  [5] stringr_1.4.1      dplyr_1.0.10       purrr_0.3.4        readr_2.1.1       
+#&gt;  [5] stringr_1.5.0      dplyr_1.0.10       purrr_0.3.4        readr_2.1.1       
 #&gt;  [9] tidyr_1.2.0        tibble_3.1.8       ggplot2_3.3.6      tidyverse_1.3.2   
 #&gt; 
 #&gt; loaded via a namespace (and not attached):
 #&gt;  [1] Rcpp_1.0.8          lubridate_1.8.0     clisymbols_1.2.0   
-#&gt;  [4] assertthat_0.2.1    digest_0.6.30       utf8_1.2.2         
+#&gt;  [4] assertthat_0.2.1    digest_0.6.31       utf8_1.2.2         
 #&gt;  [7] R6_2.5.1            cellranger_1.1.0    backports_1.3.0    
-#&gt; [10] reprex_2.0.1        evaluate_0.16       httr_1.4.4         
+#&gt; [10] reprex_2.0.1        evaluate_0.19       httr_1.4.4         
 #&gt; [13] pillar_1.8.1        rlang_1.0.6         googlesheets4_1.0.0
 #&gt; [16] readxl_1.3.1        rstudioapi_0.14     jquerylib_0.1.4    
-#&gt; [19] rmarkdown_2.16      googledrive_2.0.0   munsell_0.5.0      
+#&gt; [19] rmarkdown_2.19      googledrive_2.0.0   munsell_0.5.0      
 #&gt; [22] broom_1.0.1         compiler_4.0.2      modelr_0.1.8       
-#&gt; [25] xfun_0.33           pkgconfig_2.0.3     htmltools_0.5.3    
+#&gt; [25] xfun_0.36           pkgconfig_2.0.3     htmltools_0.5.4    
 #&gt; [28] tidyselect_1.1.2    fansi_1.0.3         crayon_1.4.2       
 #&gt; [31] tzdb_0.2.0          dbplyr_2.1.1        withr_2.5.0        
-#&gt; [34] grid_4.0.2          jsonlite_1.8.0      gtable_0.3.1       
+#&gt; [34] grid_4.0.2          jsonlite_1.8.4      gtable_0.3.1       
 #&gt; [37] lifecycle_1.0.3     DBI_1.1.1           magrittr_2.0.3     
-#&gt; [40] scales_1.2.1        cli_3.4.1           stringi_1.7.8      
+#&gt; [40] scales_1.2.1        cli_3.5.0           stringi_1.7.8      
 #&gt; [43] cachem_1.0.6        fs_1.5.2            xml2_1.3.3         
-#&gt; [46] bslib_0.4.0         ellipsis_0.3.2      generics_0.1.2     
-#&gt; [49] vctrs_0.5.0         tools_4.0.2         glue_1.6.2         
-#&gt; [52] hms_1.1.1           fastmap_1.1.0       yaml_2.3.5         
+#&gt; [46] bslib_0.4.2         ellipsis_0.3.2      generics_0.1.2     
+#&gt; [49] vctrs_0.5.1         tools_4.0.2         glue_1.6.2         
+#&gt; [52] hms_1.1.1           fastmap_1.1.0       yaml_2.3.6         
 #&gt; [55] colorspace_2.0-3    gargle_1.2.0        rvest_1.0.3        
-#&gt; [58] knitr_1.40          haven_2.5.1         sass_0.4.2</code></pre>
+#&gt; [58] knitr_1.41          haven_2.5.1         sass_0.4.4</code></pre>
 <div id="forsmark" class="section level2">
 <h2>Forsmark</h2>
 <div id="section" class="section level3">
